--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
